--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 :root{
     --green: #265858;
+    --light-green: #488f8f33;
 }
 
 *{
@@ -12,12 +13,7 @@
 
 body{
     font-family: "Poppins", sans-serif;
-    background-color: var(--red);
-}
-
-.debug{
-    background-color: rgba(0, 128, 0, 0.4);
-    border: 1px solid black;
+    background-color: rgba(187, 183, 183, 0.486);
 }
 
 h1{
@@ -26,6 +22,7 @@ h1{
 
 h2{
     display: block;
+    text-align: center;
 }
 
 h5{
@@ -33,6 +30,7 @@ h5{
 }
 
 .dati{
+    background-color: var(--light-green);
     display: flex;
     margin: 0 auto;
     border: 3px solid var(--green);
@@ -58,11 +56,18 @@ h5{
 
 .btn-gen,.btn-res{
     background-color: var(--green);
+    border: none;
 }
 
 .btn-res:hover,
 .btn-gen:hover{
-    background-color: #488f8f;
+    background-color: var(--light-green);
+    border: none;
+}
+
+.btn-res:active,
+.btn-gen:active{
+    background-color: var(--green) !important;
 }
 
 select{
@@ -71,6 +76,7 @@ select{
 }
 
 .ticket{
+    background-color: #488f8f33;
     margin: 0 auto;
     border: 3px solid var(--green);
     border-radius: 2px;
@@ -84,6 +90,10 @@ select{
 
 .ticket .box-ticket{
     display: flex;
+    border-top: 3px solid var(--green);
+    border-bottom: 3px solid var(--green);
+    border-top-left-radius: 13px;
+    border-bottom-left-radius: 13px;
 }
 
 .ticket  .box-name{
